--- a/interview_tool_spring/pom.xml
+++ b/interview_tool_spring/pom.xml
@@ -14,7 +14,8 @@
 	<name>interview_tool_spring</name>
 	<description>Tool For Recruiters During An Interviews</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
