--- a/interview_tool_spring/src/main/resources/application.properties
+++ b/interview_tool_spring/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.error.include-stacktrace=always
 
+# db
+spring.datasource.url=jdbc:sqlserver://elmos-lt23-f1m\\sqlexpress;databaseName=interview_tool;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=AzureAD/SofieGeensConsultant
+#spring.datasource.username=SofieGeensConsultant
+spring.datasource.password=Yus26338
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect. org.hibernate.dialect.SQLServer2008Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+# logging
+logging.level.root=INFO
